# rust_multi_page_website

./: Cargo.toml  Dockerfile  README.md  Rocket.toml  docker-compose.yml
src/: main.rs  tests.rs
static/css/: main.css
templates/: 404.html.tera  base.html.tera  home.html.tera  impressum.html.tera
